--- a/css/style.css
+++ b/css/style.css
@@ -214,3 +214,12 @@ blockquote {
     margin: 2%
   }
 }
+
+/*boxslider*/
+.slideshow {
+			max-width: 600px;
+			margin: 0 auto;
+		}
+.slideshow ul {
+  margin: 0;
+}
