basic map added

--- a/css/style.css
+++ b/css/style.css
@@ -223,3 +223,18 @@ blockquote {
 .slideshow ul {
   margin: 0;
 }
+
+/*map*/
+#wrapper {
+  background-color: rgb(129, 181, 212);
+  overflow: hidden;
+}
+#map {
+  width: 850px;
+  height: 575px;
+  background-color: white;
+  margin: 15px auto;
+  border: solid black 2px;
+}
+
+
